[package]
name = "brane-api"
version = "1.0.0"
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "3.0.5", features = ["derive","env"] }
dotenv = "0.15"
env_logger = "0.9"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
futures = "0.3"
juniper = "0.15"
juniper_warp = "0.7"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4"
prost = "0.8"
rdkafka = { version = "0.26", features = ["cmake-build"] }
reqwest = { version = "0.11", features = ["rustls-tls-manual-roots"] }
scylla = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3.2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
uuid = "0.8"
warp = "0.3"

brane-cfg      = { path = "../brane-cfg" }
specifications = { path = "../specifications" }
