[package]
name = "brane-api"
version = "1.0.0"
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
async-compression = { version = "0.3.15", features = ["tokio","gzip"] }
bytes = "1"
chrono = "0.4"
clap = { version = "3.0.5", features = ["derive","env"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
juniper = "0.15"
juniper_warp = "0.7"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4"
prost = "0.8"
rand = "0.8.5"
rdkafka = { version = "0.26", features = ["cmake-build"] }
reqwest = { version = "0.11", features = ["rustls-tls-manual-roots"] }
scylla = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tempfile = "3.2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tar = "0.3.0"
tokio-util = { version = "0.6", features = ["codec"] }
uuid = "0.8"
warp = "0.3"

brane-cfg      = { path = "../brane-cfg" }
brane-shr      = { path = "../brane-shr" }
specifications = { path = "../specifications" }
