[package]
name = "brane-ast"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]

[dependencies]
brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
console = "0.14"
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1", features = ["rc"] }
serde_json_any_key = "2.0.0"
specifications = { path = "../specifications" }
uuid = { version = "0.8", features = ["v4"] }

[features]
print_scanner_path = [ "brane-dsl/print_scanner_path" ]
print_parser_path = [ "brane-dsl/print_parser_path" ]
