[package]
name = "brane-cc"
version = "1.0.0"
edition = "2021"
authors = [ "Tim Müller" ]

[[bin]]
name = "branec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.9"
expanduser = "1.2.2"
human-panic = "1.0"
log = "0.4"
tokio = { version = "1", features = ["rt"] }
url = "2.2"

brane-ast = { path = "../brane-ast" }
brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
serde_json = "1"
specifications = { path = "../specifications" }
