[package]
name = "brane-cc"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]

[[bin]]
name = "branec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
env_logger = "0.10"
expanduser = "1.2.2"
human-panic = "1.0"
log = "0.4"
tokio = { version = "1", features = ["rt"] }
url = "2.2"

brane-ast = { path = "../brane-ast" }
brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
serde_json = "1"
specifications = { path = "../specifications" }
