[package]
name = "brane-cli"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[[bin]]
name = "brane"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-compression = { version = "0.3.15", features = ["tokio","gzip"] }
dirs-2 = "3.0.1"
async-trait = "0.1"
base64 = "0.13"
bollard = "0.13"
chrono = "0.4"
clap = { version = "4.0.24", features = ["derive","env"] }
console = "0.15"
cwl = { git = "https://github.com/onnovalkering/cwl-rs" }
dialoguer = "0.10"
dotenvy = "0.15"
env_logger = "0.10"
file-lock = "2.1.6"
filetime = "0.2.15"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
fs_extra = "1.2"
futures = "0.3"
futures-util = "0.3"
git2 = "0.13"
graphql_client = "0.10"
human-panic = "1.0"
hyper = "0.14"
indicatif = "0.16"
lazy_static = "1.4"
log = "0.4"
openapiv3 = "0.5"
path-clean = "0.1.0"
prettytable-rs = "0.8"
rand = "0.8"
reqwest = {version = "0.11.13", features = ["rustls-tls-manual-roots","json", "stream", "multipart"] }
rustyline = "10.0"
rustyline-derive = "0.4"
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1.9"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tar = "0.3.0"
tokio-util = "0.6"
tonic = "0.8"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-drv = { path = "../brane-drv" }
brane-dsl = { path = "../brane-dsl" }
brane-exe = { path = "../brane-exe" }
brane-oas = { path = "../brane-oas" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }


[features]
print_scanner_path = [ "brane-exe/print_scanner_path" ]
print_parser_path  = [ "brane-exe/print_parser_path" ]
print_exec_path    = [ "brane-exe/print_exec_path" ]
