[package]
name = "brane-ctl"
version = "1.0.0"
edition = "2021"
authors = [ "Tim Müller" ]

[[bin]]
name = "branectl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.24", features = ["derive","env"] }
console = "0.14"
dotenvy = "0.15"
env_logger = "0.9"
human-panic = "1.0"
log = "0.4"

brane-cfg = { path = "../brane-cfg" }
