[package]
name = "brane-drv"
version = "0.6.3"
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
clap = { version = "3.1.12", features = ["derive", "env"] }
dashmap = "4.0"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
prost = "0.8"
rdkafka = { version = "0.26", features = ["cmake-build"] }
serde_json = "1"
tokio = { version = "1", features = [] }
tokio-stream = "0.1"
tonic = "0.5"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
