[package]
name = "brane-drv"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[dependencies]
async-trait = "0.1"
clap = { version = "4.0.24", features = ["derive","env"] }
dashmap = "4.0"
dotenvy = "0.15"
env_logger = "0.10"
futures-util = "0.3"
log = "0.4"
prost = "0.11"
rdkafka = { version = "0.29", features = ["cmake-build"] }
serde_json = "1"
serde_json_any_key = "2.0.0"
tokio = { version = "1", features = [] }
tokio-stream = "0.1"
tonic = "0.8"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-prx = { path = "../brane-prx" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
