[package]
name = "brane-dsl"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[dependencies]
bytes = "1"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
itertools = "0.10"
log = "0.4"
nom = "6.1"
nom_locate = "3.0"
rand = "0.8"
regex = "1.5"
semver = "1.0"
serde = "1"
serde_json = "1"
thiserror = "1"

brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }
