[package]
name = "brane-exe"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
# bollard = "0.11"
console = "0.14"
futures = "0.3.24"
lazy_static = "1.4.0"
log = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1.20", features = [] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

brane-ast = { path = "../brane-ast" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }

[dev-dependencies]
simplelog = "0.12.0"

brane-shr = { path = "../brane-shr" }

[features]
print_scanner_path = [ "brane-ast/print_scanner_path" ]
print_parser_path  = [ "brane-ast/print_parser_path" ]
print_exec_path    = []
test_logging       = []
