[package]
name = "brane-job"
version = "0.6.3"
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
clap = { version = "3.1.12", features = ["derive", "env"] }
dotenv = "0.15"
env_logger = "0.9"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4"
tokio = { version = "1", features = [] }
tonic = "0.5"
xenon-rs = "0.4"

brane-tsk = { path = "../brane-tsk" }

[dev-dependencies]
dashmap = "4.0"
