[package]
name = "brane-job"
version = "1.0.0"
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.9"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4"
tokio = { version = "1", features = [] }
tonic = "0.5"
xenon-rs = "0.4"

brane-tsk = { path = "../brane-tsk" }

[dev-dependencies]
dashmap = "4.0"
