[package]
name = "brane-job"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[dependencies]
base64 = "0.13"
base64ct = { version = "1.5.3", features = ["alloc"] }
bollard = "0.13"
chrono = "0.4"
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.10"
futures-util = "0.3"
hyper = "0.14"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls-manual-roots","json","stream","multipart"] }
serde_json = "1"
serde_json_any_key = "2.0.0"
sha2 = "0.10.6"
tokio = { version = "1", features = [] }
tokio-stream = "0.1"
tonic = "0.8"
xenon-rs = "0.4"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }

[dev-dependencies]
dashmap = "4.0"
