[package]
name = "brane-let"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[[bin]]
name = "branelet"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.13"
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.10"
libc = "0.2.118"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# socksx = { git = "https://github.com/onnovalkering/socksx" }
subprocess = "0.2"
tokio = { version = "1", features = ["full", "time"] }
tonic = "0.8"
yaml-rust = "0.4"

brane-ast = { path = "../brane-ast" }
brane-exe = { path = "../brane-exe" }
brane-oas = { path = "../brane-oas" }
specifications = { path = "../specifications" }
