[package]
name = "brane-plr"
version = "0.6.3"
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
clap = { version = "3.1.12", features = ["derive","env"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
tokio = { version = "1", features = [] }

brane-cfg = { path = "../brane-cfg" }
brane-tsk = { path = "../brane-tsk" }
