[package]
name = "brane-plr"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.10"
futures-util = "0.3"
log = "0.4"
prost = "0.11"
rand = "0.8.5"
rdkafka = { version = "0.29", features = ["cmake-build"] }
reqwest = "0.11.13"
serde_json = "1"
tokio = { version = "1", features = [] }

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
