[package]
name = "brane-prx"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.9"
log = "0.4"
never-say-never = "6.6.666"
rustls = "0.20.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socksx = { git = "https://github.com/onnovalkering/socksx" }
tokio = { version = "1", features = [] }
tokio-rustls = "0.23.4"
warp = "0.3"

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
