[package]
name = "brane-prx"
version = { workspace = true }
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
never-say-never = "6.6.666"
reqwest = { version = "0.11", features = ["json"] }
rustls = "0.20.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socksx = { git = "https://github.com/onnovalkering/socksx" }
tokio = { version = "1", features = [] }
tokio-rustls = "0.23.4"
tonic = "0.8"
url = "2.2"
warp = "0.3"

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
