[package]
name = "brane-reg"
version = "1.0.0"
edition = "2021"
authors = [ "Tim Müller" ]

[dependencies]
base64 = "0.13"
clap = { version = "3.1.12", features = ["derive", "env"] }
dotenv = "0.15"
env_logger = "0.9"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4"
rustls = "0.20.7"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3.2"
tokio = { version = "1", features = ["rt","rt-multi-thread","macros","io-util"] }
tokio-rustls = "0.23.4"
tokio-stream = "0.1"
warp = "0.3"
x509-parser = "0.14.0"

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }
