[package]
name = "brane-tsk"
version = "1.0.0"
edition = "2021"
authors = [ "Tim Müller" ]


[dependencies]
async-trait = "0.1"
base64 = "0.13"
base64ct = { version = "1.5.3", features = ["alloc"] }
bollard = "0.10"
chrono = "0.4"
dashmap = "4.0"
futures = "0.3.24"
futures-util = "0.3"
graphql_client = "0.10"
hyper = "0.14"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4"
prost = "0.8"
rand = "0.8.5"
rdkafka = { version = "0.26", features = ["cmake-build"] }
reqwest = { version = "0.11", features = ["rustls-tls-manual-roots","json","stream","multipart"] }
serde = "1"
serde_json = "1"
serde_json_any_key = "2.0.0"
serde_yaml = "0.8"
sha2 = "0.10.6"
tokio = "1"
tokio-stream = "0.1"
tokio-tar = "0.3.0"
tokio-util = "0.6"
tonic = "0.5"
uuid = { version = "0.8", features = ["v4"] }

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }


[build-dependencies]
tonic-build = "0.5"
